<resources>
    <string name="app_name">Diet Tracker</string>
    <string name="action_about">Sobre</string>
    <string name="action_meals">Refeições</string>
    <string name="action_reports">Relatórios</string>
    <string name="action_settings">Configurações</string>
    <string name="add_meal">Adicionar Refeição</string>
    <string name="meal_name">Nome</string>
    <string name="meal_calories">Calorias</string>
    <string name="confirm">Confirmar</string>
    <string name="welcome">Olá, %1$s! Bem-vindo ao Diet Tracker</string>
    <string name="amount_of_calories">Você já consumiu %1$s de %2$s calorias diárias</string>
    <string name="current_bmi">Seu IMC atual é %1$s e você está %2$s</string>
    <string name="about_diet_tracker">Sobre o Diet Tracker</string>
    <string name="team">Equipe</string>
    <string name="team_member_1">Adriano Bezerra</string>
    <string name="team_member_2">Eduardo Chain</string>
    <string name="team_member_3">Labib Ismail</string>
    <string name="team_member_4">Rodrigo Allys</string>
    <string name="adviser">Orientador</string>
    <string name="team_adviser">Prof. Rilmar</string>
    <string name="course">Curso</string>
    <string name="course_name">Sistemas de Informação</string>
    <string name="class_name">Turma</string>
    <string name="class_year">2016/1</string>
    <string name="consumed">Consumido</string>
    <string name="to_consume">A consumir</string>
    <string name="calories_chart_center_text">Total de\ncalorias\nconsumidas</string>
    <string name="error_empty_fields">Preencha todos os campos!</string>
    <string name="error_non_integer_calories_value">Calorias deve ser um número inteiro!</string>
    <string name="error_invalid_user">Usuário inválido!</string>
    <string name="error_invalid_data">Dados inválidos!</string>
    <string name="error_exception_caught">Exceção:</string>
    <string name="user_settings">Configurações do Usuário</string>
    <string name="user_login">Login</string>
    <string name="user_password">Senha</string>
    <string name="user_name">Nome</string>
    <string name="user_age">Idade</string>
    <string name="user_weight">Peso (kg)</string>
    <string name="user_height">Altura (m)</string>
    <string name="user_gender">Sexo</string>
    <string name="user_current_diet">Dieta</string>
    <string name="update_data">Atualizar Dados</string>
    <string name="access">Acessar</string>
    <string name="add_user">Novo Usuário</string>
    <string name="save_data">Salvar Dados</string>
    <string name="underweight">sobrepeso</string>
    <string name="thin_for_weight">magro para sua altura</string>
    <string name="healthy_weight">saudável</string>
    <string name="overweight">sobrepeso</string>
    <string name="obese">obeso</string>
    <string name="exit_confirmation">Pressione Voltar para fazer logoff</string>
    <string name="added_user_confirmation">Usuário cadastrado com sucesso!</string>
    <string name="choose_meal">Escolha alguma refeição</string>
    <string name="calories_format">%1$s kcal</string>
    <string name="search">Pesquisar</string>
    <string-array name="gender">
        <item>Feminino</item>
        <item>Masculino</item>
    </string-array>
</resources>
