<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/user_settings"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:text="@string/user_login"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/edit_text_user_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text"
            android:labelFor="@id/edit_text_user_login"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="27dp"
            android:text="@string/user_password"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/edit_text_user_password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textPassword"
            android:labelFor="@id/edit_text_user_password"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="27dp"
            android:text="@string/user_name"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/edit_text_user_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="number"
            android:labelFor="@id/edit_text_user_name"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:text="@string/user_age"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/edit_text_user_age"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:inputType="number"
            android:labelFor="@id/edit_text_user_age"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/user_weight"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/edit_text_user_weight"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:labelFor="@id/edit_text_user_weight"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/user_height"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/edit_text_user_height"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:labelFor="@id/edit_text_user_height"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/user_gender"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/edit_text_user_gender"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text"
            android:labelFor="@id/edit_text_user_gender"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_update_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_data"/>

</LinearLayout>