<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_meal"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/choose_meal"
            android:textColor="@android:color/black"/>

        <Spinner
            android:id="@+id/spinner_meals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/meal_name"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/edit_text_meal_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:labelFor="@id/edit_text_meal_name"
            android:maxLength="30"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/meal_calories"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/edit_text_meal_calories"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:labelFor="@id/edit_text_meal_calories"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"/>

</LinearLayout>